try print json response

--- a/demo/index.html
+++ b/demo/index.html
@@ -27,6 +27,7 @@
             let userAction = async () => {
                 let response = await fetch('aqui function endpoint');
                 let myJson = await response.json(); //extract JSON from the http response
+                console.log(myjson);
 
             }
 
