--- a/demo/index.html
+++ b/demo/index.html
@@ -25,11 +25,13 @@
         //metodo mock, reemplazar por la llamada al function
         function getProducts(){
 
+            let result;
             fetch('https://demousmp.azurewebsites.net/api/LeerFunction?code=nceQ0Zaor9tVTGNKsWSRkBbv2A61xs97P4UyrYlmFinyQ5iqULSWZQ==')
                 .then(response => response.json())
-                .then(json => console.log(json))
+                .then(json => {console.log(json);
+                                return json;})
 
-            return json;
+
 
             let products = [
                 {"imagen":"https://mdbootstrap.com/img/new/standard/city/041.jpg","descripcion":"descripcion"},
@@ -37,8 +39,6 @@
                 {"imagen":"https://mdbootstrap.com/img/new/standard/city/041.jpg","descripcion":"descripcion"},
                 {"imagen":"https://www.w3schools.com/bootstrap/sanfran.jpg","descripcion":"descripcion"}
             ];
-
-
         }
 
         $(document).ready(function(){
