--- a/demo/index.html
+++ b/demo/index.html
@@ -38,17 +38,10 @@
     //metodo mock, reemplazar por la llamada al function
     async function getProducts(){
 
-        return await fetch('https://demousmp.azurewebsites.net/api/LeerFunction?code=nceQ0Zaor9tVTGNKsWSRkBbv2A61xs97P4UyrYlmFinyQ5iqULSWZQ==')
-            .then(response => response.json())
-            .then(json => {console.log(json);
-                return json;})
+        let res = await fetch('https://demousmp.azurewebsites.net/api/LeerFunction?code=nceQ0Zaor9tVTGNKsWSRkBbv2A61xs97P4UyrYlmFinyQ5iqULSWZQ==')
+        let data = await res.json();
+        return data;
 
-        let products = [
-            {"imagen":"https://mdbootstrap.com/img/new/standard/city/041.jpg","descripcion":"descripcion"},
-            {"imagen":"https://www.w3schools.com/bootstrap/sanfran.jpg","descripcion":"descripcion"},
-            {"imagen":"https://mdbootstrap.com/img/new/standard/city/041.jpg","descripcion":"descripcion"},
-            {"imagen":"https://www.w3schools.com/bootstrap/sanfran.jpg","descripcion":"descripcion"}
-        ];
     }
 
     $(document).ready(function(){
