eliminate duplicate item

--- a/demo/index.html
+++ b/demo/index.html
@@ -53,8 +53,9 @@
                 text += buildElement( result[i].imagen ,
                     result[i].descripcion,
                     result[i].descripcion);
-                $("div.container").append("<div class=\"row\">"+text+ "</div>")
-            }
+
+            };
+            $("div.container").append("<div class=\"row\">"+text+ "</div>");
             }
         );
 
