--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,12 @@
 
 </head>
 <body>
+<div class="alert alert-success" id="alert" role="alert">
+    Imagen Cargada!!!
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
 
 <div class="jumbotron text-center">
     <h1>Mi Super Startup</h1>
@@ -61,7 +67,8 @@
                 imagen: url
             })
         }).then(response => response.json())
-            .then(json => console.log(json))
+            .then(json => {console.log(json);
+                            $('#alert').alert()})
     }
 
     $(document).ready(function(){
