added alert event

--- a/demo/index.html
+++ b/demo/index.html
@@ -72,6 +72,7 @@
     }
 
     $(document).ready(function(){
+        $('.alert').alert();
         let loadProducts = getProducts().then(function(result){
             console.log(result);
             let text = "";
