added alert event

--- a/demo/index.html
+++ b/demo/index.html
@@ -72,7 +72,7 @@
     }
 
     $(document).ready(function(){
-        $('.alert').alert();
+        $('#alert').alert();
         let loadProducts = getProducts().then(function(result){
             console.log(result);
             let text = "";
